Feature Branch with trouble in simple.html

--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@
 	Some silly changes from the master branch.
 -->
 <head>
-	<title>A Very Silly Website on Master</title>
+	<title>A Very Troublesome Website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
