--- a/simple.html
+++ b/simple.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <!--
 	Copyright 2016 Git.Training
-	Adding changes before rebasing conflicts.
+	Some silly changes from the master branch.
 -->
 <head>
-	<title>A Very Respectable Website</title>
+	<title>A Very Silly Website on Master</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -16,13 +16,14 @@
 </head>
 <body>
 	<main class="container">
-	<!-- Content Goes Here -->
+	<!-- Just silly filler content Goes Here -->
 		<p>
-			Just some content
+			Just stuff
+			That might me replaced later.
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Git-Em-Trained 2014</p>
+		<p>&copy; Git-Em-Rebased 2014</p>
 	</footer>
 </body>
 </html>
