--- a/simple.html
+++ b/simple.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <!--
 	Copyright 2016 Git.Training
-	Some silly changes from the master branch.
 -->
 <head>
-	<title>A Very Troublesome Website</title>
+	<title>A Very Troublesome Website, in a little repo.</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
